--- a/restaurant-a-la-francaise.html
+++ b/restaurant-a-la-francaise.html
@@ -24,169 +24,168 @@
 
     <!-- Main -->
     <main>
-        <section>
-            <div class="restaurant-slider">
-                <img src="assets/img/restaurants/toa-heftiba.jpg" alt="Restaurant à la française">
+        <!-- Slider -->
+        <div class="restaurant-slider">
+            <img src="assets/img/restaurants/toa-heftiba.jpg" alt="Restaurant à la française">
+        </div>
+
+        <!-- Menu -->
+        <div class="container-page bg-lightgray">
+            <!-- Heading title -->
+            <div class="heading-title">
+                <h2 class="shrikhand title">À la française</h2>
+                <i class="fa-regular fa-heart icon"></i>
             </div>
-    
-            <!-- Menu -->
-            <div class="container-page bg-lightgray">
-                <!-- Heading title -->
-                <div class="heading-title">
-                    <h2 class="shrikhand title">À la française</h2>
-                    <i class="fa-regular fa-heart icon"></i>
+
+            <!-- Menu step 1 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Entrées</h3>
+                    <span class="title-border ml-5"></span>
                 </div>
-
-                <!-- Menu step 1 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Entrées</h3>
-                        <span class="title-border ml-5"></span>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Tartare de poulpe acidulé</h3>
+                            <p class="card-text text-truncate">Aux zestes d'orange</p>
+                        </div>
+                        <strong class="card-price">25€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Tartare de poulpe acidulé</h3>
-                                <p class="card-text">Aux zestes d'orange</p>
-                            </div>
-                            <strong class="card-price">25€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Velouté de légumes d'antan</h3>
+                            <p class="card-text text-truncate">Carotte, panais, topinambour</p>
                         </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Velouté de légumes d'antan</h3>
-                                <p class="card-text">Carotte, panais, topinambour</p>
-                            </div>
-                            <strong class="card-price">35€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Soupe à l'oignon</h3>
-                                <p class="card-text">Revisitée</p>
-                            </div>
-                            <strong class="card-price">20€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
-
-                <!-- Menu step 2 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Plats</h3>
-                        <span class="title-border ml-5"></span>
+                        <strong class="card-price">35€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Coquilles Saint-Jacques</h3>
-                                <p class="card-text">Accompagnées d'une purée de panais</p>
-                            </div>
-                            <strong class="card-price">40€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Soupe à l'oignon</h3>
+                            <p class="card-text text-truncate">Revisitée</p>
                         </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Magret de canard</h3>
-                                <p class="card-text">Et parmentier de pommes de terre</p>
-                            </div>
-                            <strong class="card-price">35€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="card-text">Sur son lit de gnocchis aux légumes</p>
-                            </div>
-                            <strong class="card-price">44€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
-
-                <!-- Menu step 3 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Desserts</h3>
-                        <span class="title-border ml-5"></span>
+                        <strong class="card-price">20€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Pétales de violettes glacés</h3>
-                                <p class="card-text">Et purée de noisettes</p>
-                            </div>
-                            <strong class="card-price">18€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Fondant au chocolat</h3>
-                                <p class="card-text">Revisité</p>
-                            </div>
-                            <strong class="card-price">22€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Millefeuille croustillant</h3>
-                                <p class="card-text">Myrtilles et pâte d’amande</p>
-                            </div>
-                            <strong class="card-price">23€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
+                </article>
+            </section>
 
-                <!-- Ending btn -->
-                <div class="ending-btn text-center">
-                    <button type="button" class="btn btn-primary mt-20 shadow">Commander</button>
+            <!-- Menu step 2 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Plats</h3>
+                    <span class="title-border ml-5"></span>
                 </div>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Coquilles Saint-Jacques</h3>
+                            <p class="card-text text-truncate">Accompagnées d'une purée de panais</p>
+                        </div>
+                        <strong class="card-price">40€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Magret de canard</h3>
+                            <p class="card-text text-truncate">Et parmentier de pommes de terre</p>
+                        </div>
+                        <strong class="card-price">35€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p class="card-text text-truncate">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <strong class="card-price">44€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Menu step 3 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Desserts</h3>
+                    <span class="title-border ml-5"></span>
+                </div>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Pétales de violettes glacés</h3>
+                            <p class="card-text text-truncate">Et purée de noisettes</p>
+                        </div>
+                        <strong class="card-price">18€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Fondant au chocolat</h3>
+                            <p class="card-text text-truncate">Revisité</p>
+                        </div>
+                        <strong class="card-price">22€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Millefeuille croustillant</h3>
+                            <p class="card-text text-truncate">Myrtilles et pâte d’amande</p>
+                        </div>
+                        <strong class="card-price">23€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Ending btn -->
+            <div class="ending-btn text-center">
+                <button type="button" class="btn btn-primary mt-20 shadow">Commander</button>
             </div>
-        </section>
+        </div>
 
         <!-- Footer -->
         <footer class="footer">
