--- a/restaurant-le-delice-des-sens.html
+++ b/restaurant-le-delice-des-sens.html
@@ -24,169 +24,168 @@
 
     <!-- Main -->
     <main>
-        <section>
-            <div class="restaurant-slider">
-                <img src="assets/img/restaurants/louis-hansel-shotsoflouis.jpg" alt="Restaurant le délice des sens">
+        <!-- Slider -->
+        <div class="restaurant-slider">
+            <img src="assets/img/restaurants/louis-hansel-shotsoflouis.jpg" alt="Restaurant le délice des sens">
+        </div>
+
+        <!-- Menu -->
+        <div class="container-page bg-lightgray">
+            <!-- Heading title -->
+            <div class="heading-title">
+                <h2 class="shrikhand title">Le délice des sens</h2>
+                <i class="fa-regular fa-heart icon"></i>
             </div>
-    
-            <!-- Menu -->
-            <div class="container-page bg-lightgray">
-                <!-- Heading title -->
-                <div class="heading-title">
-                    <h2 class="shrikhand title">Le délice des sens</h2>
-                    <i class="fa-regular fa-heart icon"></i>
+
+            <!-- Menu step 1 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Entrées</h3>
+                    <span class="title-border ml-5"></span>
                 </div>
-
-                <!-- Menu step 1 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Entrées</h3>
-                        <span class="title-border ml-5"></span>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Tartare de thon</h3>
+                            <p class="card-text text-truncate">Assaisonné au yuzu</p>
+                        </div>
+                        <strong class="card-price">25€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Tartare de thon</h3>
-                                <p class="card-text">Assaisonné au yuzu</p>
-                            </div>
-                            <strong class="card-price">25€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Bouchée de homard croustillant</h3>
+                            <p class="card-text text-truncate">Et sa farandole de petits légumes</p>
                         </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Bouchée de homard croustillant</h3>
-                                <p class="card-text">Et sa farandole de petits légumes</p>
-                            </div>
-                            <strong class="card-price">35€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Velouté de cèpes</h3>
-                                <p class="card-text">Aux truffes</p>
-                            </div>
-                            <strong class="card-price">20€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
-
-                <!-- Menu step 2 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Plats</h3>
-                        <span class="title-border ml-5"></span>
+                        <strong class="card-price">35€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Poulet rôti aux herbes de Provence</h3>
-                                <p class="card-text">Et sa crème de truffe</p>
-                            </div>
-                            <strong class="card-price">40€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Velouté de cèpes</h3>
+                            <p class="card-text text-truncate">Aux truffes</p>
                         </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Langouste rôtie</h3>
-                                <p class="card-text">Et ses légumes de saison</p>
-                            </div>
-                            <strong class="card-price">35€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Côte de boeuf Angus</h3>
-                                <p class="card-text">Et sa purée de panais</p>
-                            </div>
-                            <strong class="card-price">44€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
-
-                <!-- Menu step 3 -->
-                <section class="restaurant-menu-step">
-                    <!-- Title menu card -->
-                    <div class="card-restaurant">
-                        <h3 class="menu-step-title">Desserts</h3>
-                        <span class="title-border ml-5"></span>
+                        <strong class="card-price">20€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
                     </div>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Farandole de desserts</h3>
-                                <p class="card-text">Du chef</p>
-                            </div>
-                            <strong class="card-price">18€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Crème brulée</h3>
-                                <p class="card-text">Revisitée</p>
-                            </div>
-                            <strong class="card-price">22€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                    <!-- Card -->
-                    <article class="card">
-                        <div class="card-content align-end">
-                            <div>
-                                <h3 class="card-title">Tiramisu</h3>
-                                <p class="card-text">À la noisette</p>
-                            </div>
-                            <strong class="card-price">23€</strong>
-                            <button class="card-check" type="button">
-                                <i class="fa-solid fa-check-circle icon"></i>
-                            </button>
-                        </div>
-                    </article>
-                </section>
+                </article>
+            </section>
 
-                <!-- Ending btn -->
-                <div class="ending-btn text-center">
-                    <button type="button" class="btn btn-primary mt-20 shadow">Commander</button>
+            <!-- Menu step 2 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Plats</h3>
+                    <span class="title-border ml-5"></span>
                 </div>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Poulet rôti aux herbes de Provence</h3>
+                            <p class="card-text text-truncate">Et sa crème de truffe</p>
+                        </div>
+                        <strong class="card-price">40€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Langouste rôtie</h3>
+                            <p class="card-text text-truncate">Et ses légumes de saison</p>
+                        </div>
+                        <strong class="card-price">35€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Côte de boeuf Angus</h3>
+                            <p class="card-text text-truncate">Et sa purée de panais</p>
+                        </div>
+                        <strong class="card-price">44€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Menu step 3 -->
+            <section class="restaurant-menu-step">
+                <!-- Title menu card -->
+                <div class="card-restaurant">
+                    <h3 class="menu-step-title">Desserts</h3>
+                    <span class="title-border ml-5"></span>
+                </div>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Farandole de desserts</h3>
+                            <p class="card-text text-truncate">Du chef</p>
+                        </div>
+                        <strong class="card-price">18€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Crème brulée</h3>
+                            <p class="card-text text-truncate">Revisitée</p>
+                        </div>
+                        <strong class="card-price">22€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-content align-end">
+                        <div>
+                            <h3 class="card-title">Tiramisu</h3>
+                            <p class="card-text text-truncate">À la noisette</p>
+                        </div>
+                        <strong class="card-price">23€</strong>
+                        <button class="card-check" type="button">
+                            <i class="fa-solid fa-check-circle icon"></i>
+                        </button>
+                    </div>
+                </article>
+            </section>
+
+            <!-- Ending btn -->
+            <div class="ending-btn text-center">
+                <button type="button" class="btn btn-primary mt-20 shadow">Commander</button>
             </div>
-        </section>
+        </div>
 
         <!-- Footer -->
         <footer class="footer">
