Ajout animation page restaurant

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <h3 class="card-title">La palette du goût</h3>
                             <p class="card-text">Ménilmontant</p>
                         </a>
-                        <button class="card-btn btn-icon" type="button">
+                        <button class="card-btn btn-heart" type="button">
                             <i class="fa-regular fa-heart icon icon-empty"></i>
                             <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
@@ -97,7 +97,7 @@
                             <h3 class="card-title">La note enchantée</h3>
                             <p class="card-text">Charonne</p>
                         </a>
-                        <button class="card-btn btn-icon" type="button">
+                        <button class="card-btn btn-heart" type="button">
                             <i class="fa-regular fa-heart icon icon-empty"></i>
                             <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
@@ -113,7 +113,7 @@
                             <h3 class="card-title">À la française</h3>
                             <p class="card-text">Cité Rouge</p>
                         </a>
-                        <button class="card-btn btn-icon" type="button">
+                        <button class="card-btn btn-heart" type="button">
                             <i class="fa-regular fa-heart icon icon-empty"></i>
                             <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
@@ -129,7 +129,7 @@
                             <h3 class="card-title">La délice du sens</h3>
                             <p class="card-text">Folie-Méricourt</p>
                         </a>
-                        <button class="card-btn btn-icon" type="button">
+                        <button class="card-btn btn-heart" type="button">
                             <i class="fa-regular fa-heart icon icon-empty"></i>
                             <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
