--- a/restaurant-a-la-francaise.html
+++ b/restaurant-a-la-francaise.html
@@ -34,7 +34,10 @@
             <!-- Heading title -->
             <div class="heading-title">
                 <h2 class="shrikhand title">À la française</h2>
-                <i class="fa-regular fa-heart icon"></i>
+                <button class="heading-btn btn-heart" type="button">
+                    <i class="fa-regular fa-heart icon icon-empty"></i>
+                    <i class="fa-solid fa-heart icon icon-full"></i>
+                </button>
             </div>
 
             <!-- Menu step 1 -->
