Ajout du mailto sur les pages restaurants

--- a/restaurant-a-la-francaise.html
+++ b/restaurant-a-la-francaise.html
@@ -217,7 +217,7 @@
                     <a href="#">Mentions légales</a>
                 </div>
                 <div class="footer-item">
-                    <a href="#">Contact</a>
+                    <a href="mailto:contact@ohmyfood.fr">Contact</a>
                 </div>
             </div>
         </footer>
