Remplacement du loader

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Loader -->
     <div class="loader">
-        <i class="fas fa-circle-notch fa-spin loader-icon"></i>
+        <img src="assets/img/icon/spinner.png" alt="Loader" class="loader-icon">
     </div>
 
     <main>
